@@ -15,8 +15,10 @@
 import unittest
 import Testing
 
-from zope.app.testing.placelesssetup import PlacelessSetup
+from zope.component import eventtesting
 from zope.interface.verify import verifyClass
+from zope.testing.cleanup import cleanUp
+
 
 def makerequest(root, stdout, stdin=None):
     # Customized version of Testing.makerequest.makerequest()
@@ -36,7 +38,7 @@ def makerequest(root, stdout, stdin=None):
     return req
 
 
-class CookieCrumblerTests(unittest.TestCase, PlacelessSetup):
+class CookieCrumblerTests(unittest.TestCase):
 
     _CC_ID = 'cookie_authentication'
 
@@ -53,9 +55,9 @@ class CookieCrumblerTests(unittest.TestCase, PlacelessSetup):
         from Products.CMFCore.interfaces import ICookieCrumbler
         from Products.CMFCore.CookieCrumbler import handleCookieCrumblerEvent
 
-        PlacelessSetup.setUp(self)
         self._finally = None
 
+        eventtesting.setUp()
         provideHandler(handleCookieCrumblerEvent,
                        adapts=(ICookieCrumbler, IObjectEvent))
 
@@ -66,7 +68,7 @@ class CookieCrumblerTests(unittest.TestCase, PlacelessSetup):
             self._finally()
 
         noSecurityManager()
-        PlacelessSetup.tearDown(self)
+        cleanUp()
 
     def _makeSite(self):
         import base64
