@@ -53,11 +53,10 @@ setup(name='Products.%s' % NAME,
           ],
       tests_require=[
           'zope.testing >= 3.7.0',
-          'zope.app.testing',
           ],
       extras_require=dict(
         test=[
-          'zope.app.testing',
+          'zope.testing',
           ]),
       test_loader='zope.testing.testrunner.eggsupport:SkipLayers',
       test_suite='Products.%s' % NAME,
